--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: '>=2.19.6 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,11 +34,16 @@ dependencies:
   flutter_lints: ^5.0.0
   go_router: ^11.1.2
   intl: ^0.19.0
-  sqflite:
+  sqflite: ^2.4.2
   path_provider:
   flutter_bloc: ^8.1.3
   cached_network_image: ^3.3.0
   flutter_svg:
+  worker_manager: ^7.2.2
+  flutter_local_notifications: ^19.0.0
+  timezone: ^0.10.0
+  search_app_bar_page: ^2.5.0
+  accordion: ^2.6.0
 
 dev_dependencies:
   flutter_test:
