--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   timezone: ^0.10.0
   search_app_bar_page: ^2.5.0
   accordion: ^2.6.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,12 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/img/logo.png" # Đường dẫn đến icon của bạn
+  adaptive_icon_background: "#ffffff"  # Chỉ dành cho Android
+  adaptive_icon_foreground: "assets/img/logo.png"
 flutter:
 
   # The following line ensures that the Material Icons font is
